apps/staging/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dashboard.justindesio.com
      secretName: homarr-tls
  rules:
    - host: dashboard.justindesio.com
      http:
        paths:
          - backend:
              service:
                name: homarr
                port:
                  number: 7575
            path: /
            pathType: Prefix
